<resources>
    <string name="app_name" translatable="false">TourCount</string>
    <string name="location_attr_label" translatable="false">LocationCheck</string>
    <string name="ringSound_attr_label" translatable="false">RingSound</string>
    <string name="title_activity_add_species" translatable="false">AddSpeciesActivity</string>
    <string name="title_activity_count_options" translatable="false">EditSpeciesNotesActivity</string>
    <string name="title_activity_counting" translatable="false">CountingActivity</string>
    <string name="title_activity_del_species" translatable="false">DelSpeciesActivity</string>
    <string name="title_activity_edit_individual" translatable="false">EditIndividualActivity</string>
    <string name="title_activity_edit_section" translatable="false">EditSpeciesListActivity</string>
    <string name="title_activity_file_chooser" translatable="false">AdvFileChooser</string>
    <string name="title_activity_meta" translatable="false">EditMetaActivity</string>
    <string name="title_activity_show_results" translatable="false">ShowResultsActivity</string>
    <string name="title_activity_tour_options" translatable="false">EditTourNotesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="newLoc">Locality found: </string>
    <string name="outsideEurope">but is outside the European fauna area.</string>
    <string name="avCoords">Average Coordinates:</string>
    <string name="back_twice">Press again to exit</string>
    <string name="bema">Spec. Notes:</string>
    <string name="bemaRes">Spec. Notes</string>
    <string name="bems">Indiv. Notes:</string>
    <string name="bemsRes">Indiv. Notes</string>
    <string name="cancelButton">Cancel</string>
    <string name="changeLogTitle">App Info</string>
    <string name="cntse">Counts Eg.</string>
    <string name="cntsf">Counts ♀</string>
    <string name="cntsl">Counts Ca.</string>
    <string name="cntsm">Counts ♂</string>
    <string name="cntsmf">Counts ♂|♀</string>
    <string name="cntsp">Counts Pu.</string>
    <string name="confirmDBImport">Are you sure you want to import a DB file? Your current data will be overwritten!\n\nNote! If this is an older version of the file, go afterwards to “Settings” and check that the correct data language is set.</string>
    <string name="confirmListImport">Are you sure you want to import the species list? Your current counting data will be deleted!</string>
    <string name="confirmResetDB">Are you sure you want to reset the Count DB? Your current counting data will be deleted!</string>
    <string name="corruptDb">Database error! If problem remains after restart and after import of a different TourCount-DB, please de-install and re-install the app.</string>
    <string name="counting">Counting</string>
    <string name="editMetaButton">Edit Metadata</string>
    <string name="exportBasisMenu">Export Basic DB</string>
    <string name="exportCSVMenu">Export Results (csv)</string>
    <string name="exportXLSXMenu">Export Results (xlsx)</string>
    <string name="exportMenu">Export Current DB</string>
    <string name="exportSpeciesListMenu">Export Species List</string>
    <string name="importBasisMenu">Import Basic DB</string>
    <string name="importButton">Import</string>
    <string name="importFail">Your database could not be imported!</string>
    <string name="importFileMenu">Import DB</string>
    <string name="importList">The species list has been imported.</string>
    <string name="importListFail">The species list could not be imported!</string>
    <string name="importSpeciesListMenu">Import Species List</string>
    <string name="importDB">Your database has been imported.</string>
    <string name="individuals">Individuals</string>
    <string name="missingEmail">Please enter a valid email address under Settings for reliable location detection.</string>
    <string name="name_spec">Species Name:</string>
    <string name="name_specRes">Species Name</string>
    <string name="noCard">Cannot write to the \'Documents\' directory!</string>
    <string name="reset2basic">Your database has been resetted.</string>
    <string name="resetDBMenu">Reset Data</string>
    <string name="resetFail">Your database could not be resetted!</string>
    <string name="saveBasisDB">Exporting Basic DB to \'Documents/TourCount\'</string>
    <string name="saveCSV">Exporting the CSV-file to \'Documents/TourCount\'</string>
    <string name="saveXLSX">Exporting the XLSX-file to \'Documents/TourCount\'</string>
    <string name="saveDB">Exporting internal DB to \'Documents/TourCount\'</string>
    <string name="saveFail">Your database could not be exported!</string>
    <string name="saveFailList">The species list could not be exported!</string>
    <string name="saveFailListTransect">Export to \'Documents/TransektCount\' failed!</string>
    <string name="saveList">Species list exported.</string>
    <string name="sort_codes">Species sorted by species codes</string>
    <string name="sort_names">Species sorted by species names</string>
    <string name="sort_time">Individuals sorted by registered time</string>
    <string name="specsCommonLangMissing">Attention! The local data language is not defined in the old list. Please, select it in "Settings". Otherwise, German species names will be used.</string>
    <string name="sum">Totals:</string>
    <string name="sumSpec">Diff. Species:</string>
    <string name="sum_total">Sum Total:</string>
    <string name="title">Species-specific counting\n\nof butterflies on walks</string>
    <string name="viewHelpTitle">Help</string>
    <string name="viewLicenseTitle">Licenses</string>
    <string name="showResultsButton">Show Results</string>
    <string name="waitImport">Please wait, import may take a while!</string>
    <string name="zList">Counting List</string>
    <string name="fileHeadlineBasicDB">TourCount Basic DB files</string>
    <string name="fileHeadlineCSV">Species lists</string>
    <string name="fileHeadlineDB">List of selectable DB files</string>
    <string name="fileSize">Size</string>
    <string name="importHead">Data Import</string>
    <string name="noFile">No file available!</string>
    <string name="br_Error">There is a problem with the selected file!</string>
    <string name="bstate">State:</string>
    <string name="bstateRes">State</string>
    <string name="city">City:</string>
    <string name="cityRes">City</string>
    <string name="clouds">Clouds (%):</string>
    <string name="cloudsRes">Clouds (%)</string>
    <string name="cnts">Counts</string>
    <string name="country">Country:</string>
    <string name="countryRes">Country</string>
    <string name="date">Date:</string>
    <string name="dateRes">Date</string>
    <string name="editHeadTitle">Metadata</string>
    <string name="endtm">until:</string>
    <string name="hinttap">Click here</string>
    <string name="inspector">Observer Name:</string>
    <string name="place">Place:</string>
    <string name="placeRes">Place</string>
    <string name="plz">P. Code:</string>
    <string name="plzRes">P. Code</string>
    <string name="slocality">Locality (Start):</string>
    <string name="slocalityRes">Locality (Start)</string>
    <string name="speccode">Spec. Code:</string>
    <string name="speccodeRes">Spec. Code</string>
    <string name="starttm">Time from:</string>
    <string name="temperature">Temp. (°C):</string>
    <string name="temperatureRes">Temp. (°C)</string>
    <string name="tm">Time:</string>
    <string name="tmRes">Time</string>
    <string name="valClouds">Clouds out of range!</string>
    <string name="valTemp">Unrealistic temperature!</string>
    <string name="valWind">Wind out of range!</string>
    <string name="wind">Wind (0–4):</string>
    <string name="windRes">Wind (0–4)</string>
    <string name="zlNotes">Tour Notes:</string>
    <string name="zlNotesRes">Tour Notes</string>
    <string name="count1">Count</string>
    <string name="indivDel">Deleted: Individual with ID:</string>
    <string name="locality">Locality</string>
    <string name="note">Individual Notes</string>
    <string name="saveIndividualButton">Save</string>
    <string name="sex">Sexus</string>
    <string name="stadium">Phase</string>
    <string name="stadium_1">Butterfly</string>
    <string name="stadium_2">Pupa</string>
    <string name="stadium_3">Caterpillar</string>
    <string name="stadium_4">Egg</string>
    <string name="status123">Status (0–6)</string>
    <string name="time">Time</string>
    <string name="uncerti">Uncertainty (m):</string>
    <string name="uncertiRes">Uncertainty (m)</string>
    <string name="valState">State out of range!</string>
    <string name="xcoord">Latitude:</string>
    <string name="xcoordRes">Latitude</string>
    <string name="ycoord">Longitude:</string>
    <string name="ycoordRes">Longitude</string>
    <string name="zcoord">Height (m):</string>
    <string name="zcoordRes">Height (m)</string>
	<string name="takePhoto">Take Photo</string>
    <string name="action_share">Share</string>
    <string name="chooserTitle">Select photo app</string>
    <string name="deleteButton">Remove</string>
    <string name="editAddSpecTitle">Add Species</string>
    <string name="editDelSpecTitle">Remove Species</string>
    <string name="editSectTitle">Edit List</string>
    <string name="noPhotoPermit">The right to take photos is missing.</string>
    <string name="saveCountsButton">Save</string>
    <string name="send_to">Share notes</string>
    <string name="duplicate">Each name must be unique!</string>
    <string name="editTitle">Edit Terms</string>
    <string name="hintNotYet">None</string>
    <string name="email_hint">Please type in a valid email address here</string>
    <string name="pref_awake">Keep Screen On</string>
    <string name="pref_awake_summ">Prevent screen from sleeping whilst counting.</string>
    <string name="pref_bg">Background</string>
    <string name="pref_bg_summ">Choose default or no background image.</string>
    <string name="pref_bright">Screen Bright</string>
    <string name="pref_bright_summ">Sets the TourCount screens for counting and editing bright.</string>
    <string name="pref_button_sound">Button Sound</string>
    <string name="pref_button_sound_summary">Make a short sound for a button pressed.</string>
    <string name="pref_button_vib">Button Vibration</string>
    <string name="pref_button_vib_summary">Make a vibration upon pressing a count button.</string>
    <string name="pref_email_string">Mail Address for OSM Geocoder</string>
    <string name="pref_email_string_summ">Necessary for reliable query of address data per OSM Nominatim Reverse Geocoder.\nThe mail address will be treated confidentially and will only be used to contact you in case of service problems. See https://wiki.openstreetmap.org/wiki/Nominatim.</string>
    <string name="pref_left_hand">Left-hander</string>
    <string name="pref_left_hand_summ">Show left-hander counter view.</string>
    <string name="pref_metadata">GPS Reverse Geocoding</string>
    <string name="pref_metadata_summ">When selected, tries to substitute the location metadata you entered by Reverse Geocoding.</string>
    <string name="pref_sort_order">Sorting of Species</string>
    <string name="pref_sort_order_sp_summ">Sort order of your species list.</string>
    <string name="prefs_appearance">Appearance</string>
    <string name="prefs_counting">Counting</string>
    <string name="prefs_metadata">Metadata</string>
    <string name="txtIndividuals">Sum of counted individuals: </string>
    <string name="txtLat">La.:</string>
    <string name="txtLon">Lo.:</string>
    <string name="txtSpecies">Different counted species: </string>
    <string name="txtSt">Stad.:</string>
    <string name="txtSte">State:</string>
    <string name="txtSx">Sex.:</string>
    <string name="txt_time">Time</string>
    <string name="charZero">0</string>
</resources>