<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    app:useSimpleSummaryProvider="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/prefs_appearance">
        android:key="key_prefs_appearance">

        <ListPreference
            android:entries="@array/pref_bg_entries"
            android:entryValues="@array/pref_bg_values"
            android:icon="@drawable/ic_wallpaper_black_48dp"
            android:key="pref_back"
            android:summary="@string/pref_bg_summ"
            android:title="@string/pref_bg"/>
        
        <ListPreference
            android:entries="@array/pref_sort_sp_entries"
            android:entryValues="@array/pref_sort_sp_values"
            android:icon="@drawable/ic_sort_black_48dp"
            android:key="pref_sort_sp"
            android:summary="@string/pref_sort_order_sp_summ"
            android:title="@string/pref_sort_order"/>
        
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_format_size_black_48dp"
            android:key="pref_note_font"
            android:summary="@string/pref_note_font_summ"
            android:title="@string/pref_note_font"/>
        
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_panl_tool_black_48dp"
            android:key="pref_left_hand"
            android:summary="@string/pref_left_hand_summ"
            android:title="@string/pref_left_hand"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_sound">
        android:key="key_prefs_sound">
        
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_music_video_black_48dp"
            android:key="pref_button_sound"
            android:summary="@string/pref_button_sound_summary"
            android:title="@string/pref_button_sound"/>

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_vibration_black_48dp"
            android:key="pref_button_vib"
            android:summary="@string/pref_button_vib_summary"
            android:title="@string/pref_button_vib"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_counting">
        android:key="key_prefs_counting">
        
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_stay_current_portrait_grey_48dp"
            android:key="pref_awake"
            android:summary="@string/pref_awake_summ"
            android:title="@string/pref_awake"/>
        
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_stay_current_portrait_black_48dp"
            android:key="pref_bright"
            android:summary="@string/pref_bright_summ"
            android:title="@string/pref_bright"/>
        
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_playlist_add_check_black_48dp"
            android:key="pref_duplicate"
            android:summary="@string/pref_duplicate_summary"
            android:title="@string/pref_duplicate"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_metadata">
        android:key="key_prefs_metadata">
        
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_room_black_48dp"
            android:key="pref_metadata"
            android:summary="@string/pref_metadata_summ"
            android:title="@string/pref_metadata"/>
    </PreferenceCategory>

    <EditTextPreference
        android:hint="@string/email_hint"
        android:icon="@drawable/ic_email_black_48dp"
        android:key="email_String"
        android:summary="@string/pref_email_string_summ"
        android:title="@string/pref_email_string"/>

</PreferenceScreen>
