<?xml version="1.0" encoding="utf-8"?>

<!-- widget_list_individual.xml used by ListIndividualWidget.kt.
 Copyright © 2016-2024, Wilhelm Stein, Bonn, Germany.
 Shows individuals line of species -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@drawable/corner"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context=".ShowResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:orientation="horizontal">

        <!-- Locality of individual -->
        <TextView
            android:id="@+id/txtIndLoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.8"
            android:ellipsize="end"
            android:gravity="start"
            android:padding="4sp"
            android:singleLine="true"
            android:textSize="13sp"
            android:textStyle="bold" />

        <!-- Sexus of individual -->
        <TextView
            android:id="@+id/txtIndSx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:hint="@string/txtSx"
            android:maxLines="1"
            android:padding="4sp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtIndSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start"
            android:padding="4sp"
            android:textSize="13sp"
            android:textStyle="bold" />

        <!-- Stadium of individual -->
        <TextView
            android:id="@+id/txtIndStd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:hint="@string/txtSt"
            android:maxLines="1"
            android:padding="4sp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtIndStad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start"
            android:padding="4sp"
            android:textSize="13sp"
            android:textStyle="bold" />

        <!-- State of individual -->
        <TextView
            android:id="@+id/txtIndSte"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:hint="@string/txtSte"
            android:maxLines="1"
            android:padding="4sp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtIndStat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginEnd="3dp"
            android:gravity="start"
            android:padding="4sp"
            android:textSize="13sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Time of individual -->
        <TextView
            android:id="@+id/txtIndTm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="start|top"
            android:hint="@string/txt_time"
            android:padding="4sp"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <!-- State of individual -->
        <TextView
            android:id="@+id/txtIndLon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginStart="4dp"
            android:gravity="end"
            android:hint="@string/txtLon"
            android:maxLines="1"
            android:padding="4sp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <!-- Latitude of individual -->
        <TextView
            android:id="@+id/txtIndLo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:gravity="start|top"
            android:padding="4sp"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <!-- Longitude of individual -->
        <TextView
            android:id="@+id/txtIndLat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_marginStart="8dp"
            android:gravity="end"
            android:hint="@string/txtLat"
            android:maxLines="1"
            android:padding="4sp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtIndLa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:gravity="start|top"
            android:padding="4sp"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <!-- count of individual -->
        <com.wmstein.tourcount.AutoFitText
            android:id="@+id/txtIndCnt"
            style="@style/ListBoldText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="6dp"
            android:layout_weight="0.6"
            android:background="@drawable/count_background"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            android:paddingEnd="1dp"
            android:paddingBottom="1dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</LinearLayout>
