<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. Wilhelm Stein, Bonn, Germany.
  -->

<!-- widget_sum_species.xmls used by ListSpeciesWidget.java and ListSpeciesActivity.java.
     Shows totals of species counts -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:baselineAligned="false"
              android:background="@drawable/corner"
              android:orientation="horizontal"
              android:padding="3dp"
              tools:context=".ListSpeciesActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="0dp">
        
        <!-- Line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="10dp"
            android:paddingTop="2dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSpecies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="start|top"
                android:padding="2sp"
                android:text="@string/txtSpecies"
                android:textColor="#BFFFFF"
                android:textStyle="bold"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/sumSpecies"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:layout_marginBottom="0dp"
                android:layout_weight="1.6"
                android:background="@drawable/count_background"
                android:gravity="center|center_vertical|center_horizontal"
                android:hint="@string/charZero"
                android:padding="0dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtIndividuals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="start|top"
                android:padding="2sp"
                android:text="@string/txtIndividuals"
                android:textColor="#BFFFFF"
                android:textStyle="bold"
                android:textSize="17sp"/>

				<TextView
                android:id="@+id/sumIndividuals"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:layout_marginBottom="0dp"
                android:layout_weight="1.6"
                android:background="@drawable/count_background"
                android:gravity="center|center_vertical|center_horizontal"
                android:hint="@string/charZero"
                android:padding="0dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:maxLines="1"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
